--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,11 @@
+.container{
+    display: flex;
+    }
 
+#tbl,th,td{
+    border: 3px solid black;
+    border-radius: 5px;
+
+
+}
 /* Your CSS Code here. */
